# bup

./: .coveragerc  .gitignore  CLAUDE.md  LICENSE  README.md  blackify.bat  build.bat  bup.bat  make_venv.bat  pypi.bat  pyproject.toml  pyship.bat  requirements-dev.txt  run_flake8.bat  setup.py
.claude/: settings.local.json
.github/workflows/: ci.yml
bup/: __init__.py  __main__.py  __version__.py  arguments.py  backup_types.py  bup_base.py  dynamodb_backup.py  dynamodb_local_backup.py  git_local_backup.py  github_backup.py  main.py  preferences.py  print_log.py  robust_os_calls.py  s3_backup.py  s3_local_backup.py  ui_types.py
bup/cli/: __init__.py  cli_main.py
bup/gui/: __init__.py  about.py  bup_dialog.py  gui_icon.py  gui_main.py  preferences.py  preferences_box.py  preferences_widget.py  run_backup_widget.py
doc/: flake8_report.txt
icons/: icons.txt
test_bup/: __init__.py  conftest.py  test_bup.db  test_bup_dialog.py  test_cli_main.py  test_display_box.py  test_github_backup.py  test_gui_icon.py  test_preferences.py  test_preferences_gui.py  test_preferences_line_edit.py  test_preferences_widget.py  test_print_log.py  test_robust_os_calls.py  test_run_backup_widget.py
