[project]
name = "bup"
dynamic = ["version"]
description = "Backup utility"
readme = "README.md"

[tool.setuptools.dynamic]
version = {attr = "bup.__version__"}

[tool.hatch.version]
path = "bup/__version__.py"

[tool.pyship]
is_gui = true

# registry settings pyship is using has been flagging a false positve on windows defender so don't use run_on_startup for now
run_on_startup = false

[tool.pytest.ini_options]
norecursedirs = "app build dist .git .pytest_cache venv"
